Salvage non-ASCII by conversion not deletion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ importFrom(readr,cols)
 importFrom(readr,locale)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
+importFrom(stringi,stri_trans_general)
