--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,16 @@ export(exact_match)
 export(id_match)
 export(snapshot_import)
 export(snapshot_list)
+export(vrmatch)
 import(dplyr)
 importFrom(Kmisc,clean_vars)
 importFrom(assertthat,assert_that)
+importFrom(fastLink,fastLink)
 importFrom(fst,write.fst)
+importFrom(lubridate,is.Date)
+importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,wday)
+importFrom(parallel,detectCores)
 importFrom(readr,cols)
 importFrom(readr,locale)
 importFrom(readr,read_csv)
