Initial deployment of vrmatch, no blocks/sample adds yet, CRAN-passed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(dplyr)
 importFrom(Kmisc,clean_vars)
 importFrom(assertthat,assert_that)
 importFrom(fastLink,fastLink)
+importFrom(fst,read.fst)
 importFrom(fst,write.fst)
 importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
