--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,18 @@ export(id_match)
 export(snapshot_import)
 export(snapshot_list)
 export(vrmatch)
-import(dplyr)
 importFrom(Kmisc,clean_vars)
 importFrom(assertthat,assert_that)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,anti_join)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_if)
+importFrom(dplyr,row_number)
+importFrom(dplyr,tibble)
 importFrom(fastLink,fastLink)
 importFrom(fst,read.fst)
 importFrom(fst,write.fst)
