--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(clean_contact)
 export(clean_snapshot)
 export(exact_match)
 export(id_match)
+export(performance)
 export(snapshot_import)
 export(snapshot_list)
 export(vrmatch)
@@ -28,8 +29,11 @@ importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,wday)
 importFrom(parallel,detectCores)
+importFrom(purrr,map)
+importFrom(purrr,set_names)
 importFrom(readr,cols)
 importFrom(readr,locale)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
+importFrom(stats,na.omit)
 importFrom(stringi,stri_trans_general)
