--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(changes_extract)
 export(changes_report)
 export(clean_contact)
 export(clean_snapshot)
+export(dedup_full)
 export(exact_match)
 export(id_match)
 export(performance)
@@ -16,12 +17,18 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,group_indices)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,n)
 importFrom(dplyr,row_number)
+importFrom(dplyr,select)
 importFrom(dplyr,tibble)
+importFrom(dplyr,ungroup)
 importFrom(fastLink,fastLink)
 importFrom(fst,read.fst)
 importFrom(fst,write.fst)
