--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(dplyr,mutate_if)
 importFrom(dplyr,n)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(fastLink,fastLink)
