Rarer exceptions due to dups in aff number, use plyr match_df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,wday)
 importFrom(parallel,detectCores)
+importFrom(plyr,match_df)
 importFrom(purrr,map)
 importFrom(purrr,set_names)
 importFrom(readr,cols)
