comparison fxn for setdiff and union btw vrmatch objs, CRAN-passable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(changes_extract)
 export(changes_report)
 export(clean_contact)
 export(clean_snapshot)
+export(compare)
 export(exact_match)
 export(id_match)
 export(performance)
