Add tidyr but drop dependencies on too many packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,3 +51,4 @@ importFrom(readr,read_csv)
 importFrom(readr,read_delim)
 importFrom(stats,na.omit)
 importFrom(stringi,stri_trans_general)
+importFrom(tidyr,drop_na)
