--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,25 +25,22 @@ Imports:
     dplyr, 
     readr, 
     purrr, 
-    tibble, 
+    tidyr,
     stringr,
     stringi,
     magrittr, 
     lubridate, 
     fst,
-    DMwR, 
     fontcm, 
     extrafont,
     ggplot2, 
     ggthemes,
     RecordLinkage,
-    fastLink (>= 0.4.0), 
+    fastLink (>= 0.5.0), 
     futile.matrix, 
     assertthat, 
     xtable, 
     parallel, 
-    foreach, 
-    doParallel,
     anomalize,
     Kmisc
 Remotes: sysilviakim/Kmisc
