Faster trimws by data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,15 +15,22 @@ export(snapshot_import)
 export(snapshot_list)
 export(vrmatch)
 importFrom(Kmisc,clean_vars)
+importFrom(Kmisc,dedup)
+importFrom(Kmisc,loadRData)
+importFrom(RecordLinkage,compare.dedup)
 importFrom(assertthat,assert_that)
+importFrom(data.table,setDT)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,filter_at)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_by_at)
 importFrom(dplyr,group_indices)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
@@ -34,6 +41,8 @@ importFrom(dplyr,sample_frac)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(dplyr,summarise)
+importFrom(dplyr,summarise_at)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(fastLink,fastLink)
@@ -42,8 +51,11 @@ importFrom(fst,write.fst)
 importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,wday)
+importFrom(magrittr,"%<>%")
 importFrom(parallel,detectCores)
 importFrom(plyr,match_df)
+importFrom(purrr,cross2)
+importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,set_names)
 importFrom(readr,cols)
