--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(Kmisc,dedup)
 importFrom(Kmisc,loadRData)
 importFrom(RecordLinkage,compare.dedup)
 importFrom(assertthat,assert_that)
+importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
