Fix #23 (documentation bug fix)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(data.table,setDT)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
@@ -66,3 +67,4 @@ importFrom(readr,read_delim)
 importFrom(stats,na.omit)
 importFrom(stringi,stri_trans_general)
 importFrom(tidyr,drop_na)
+importFrom(utils,read.delim)
